--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Andrew's app</h1> 
-<app-post-create></app-post-create>
+<app-header></app-header>
+<main>
+  <app-post-create></app-post-create>
+</main>
+
